--- a/fastapi/Dockerfile
+++ b/fastapi/Dockerfile
@@ -12,6 +12,9 @@ RUN apt-get update && apt-get install -y \
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
+# Criar diretório para modelos
+RUN mkdir -p /app/models
+
 # Copia o código da aplicação
 COPY . .
 
